--- a/src/index.scss
+++ b/src/index.scss
@@ -16,23 +16,23 @@ $fw-bold: 800;
 $radius: 0.5rem;
 
 body[data-theme='dark'] {
-  $colors-text: hsl(0, 0%, 100%);
-  $colors-background: hsl(207, 26%, 17%);
-  $colors-ui-base: hsl(209, 23%, 22%);
-  $shadow: rgba(245, 245, 245, 0.2) 0 0 8px;
+  --colors-text: hsl(0, 0%, 100%);
+  --colors-background: hsl(207, 26%, 17%);
+  --colors-ui-base: hsl(209, 23%, 22%);
+  --shadow: rgba(245, 245, 245, 0.2) 0 0 8px;
 }
 
 body[data-theme='light'] {
-  $colors-text: hsl(200, 15%, 8%);
-  $colors-background: hsl(0, 0%, 98%);
-  $colors-ui-base: hsl(0, 0%, 100%);
-  $shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  --colors-text: hsl(200, 15%, 8%);
+  --colors-background: hsl(0, 0%, 98%);
+  --colors-ui-base: hsl(0, 0%, 100%);
+  --shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 body {
   margin: 0;
   font-family: $family;
+  color: var(--colors-text);
   font-weight: $fw-light;
-  color: $colors-text;
-  background: $colors-background;
+  background-color: var(--colors-background);
 }
