refactor: add style for Select

--- a/src/components/Controls.module.scss
+++ b/src/components/Controls.module.scss
@@ -9,3 +9,26 @@
     align-items: center;
   }
 }
+
+.select {
+  width: 200px;
+  border-radius: var(--radius);
+  font-family: var(--family);
+  border: none;
+
+  & > * {
+    box-shadow: var(--shadow);
+  }
+
+  & input {
+    padding-left: 0.25rem;
+  }
+
+  & * {
+    color: var(--colors-text) !important;
+  }
+
+  & > div[id] {
+    background-color: var(--colors-ui-base);
+  }
+}
