--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -12,7 +12,7 @@
 
 .title {
   color: var(--colors-text);
-  font-size: var(--fs-sm);
+  font-size: var(--fs-md);
   text-decoration: none;
   font-weight: var(--fw-bold);
 }
